RI-7687: fix double scroll issue on the RDI statistics page (#5172)
* RI-7687: fix double scroll issue on the RDI statistics page

* RI-7687: fix double scroll issue on the RDI statistics page

--- a/redisinsight/ui/src/templates/rdi-instance-page-template/styles.module.scss
+++ b/redisinsight/ui/src/templates/rdi-instance-page-template/styles.module.scss
@@ -2,8 +2,3 @@
   height: 100%;
   padding-bottom: 16px;
 }
-
-.content {
-  height: calc(100% - 130px);
-  flex: 1
-}
